Update lists at 20241122-1500

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -124,6 +124,7 @@ allow 144.172.118.4;
 allow 144.172.118.55;
 allow 144.172.118.73;
 allow 146.59.126.232;
+allow 147.45.116.145;
 allow 147.45.78.34;
 allow 148.113.152.91;
 allow 149.202.79.101;
@@ -175,6 +176,7 @@ allow 171.25.193.78;
 allow 171.25.193.79;
 allow 171.25.193.80;
 allow 172.104.243.155;
+allow 172.104.248.232;
 allow 172.105.161.162;
 allow 172.234.228.174;
 allow 172.81.131.110;
@@ -268,6 +270,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -626,7 +629,8 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.88;
+allow 195.47.238.90;
+allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -892,6 +896,9 @@ allow 23.154.177.29;
 allow 23.154.177.3;
 allow 23.154.177.30;
 allow 23.154.177.31;
+allow 23.154.177.4;
+allow 23.154.177.5;
+allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
@@ -912,7 +919,6 @@ allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -1088,6 +1094,7 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
+allow 2a01:7e01::f03c:95ff:fe96:7671;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
@@ -1362,6 +1369,8 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:6930:c716:eaf8:f394;
+allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
@@ -1486,6 +1495,7 @@ allow 45.128.133.242;
 allow 45.129.0.166;
 allow 45.129.84.246;
 allow 45.129.84.247;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1589,7 +1599,6 @@ allow 5.255.111.64;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.218;
-allow 5.255.118.244;
 allow 5.255.120.205;
 allow 5.255.121.71;
 allow 5.255.123.158;
@@ -1627,7 +1636,6 @@ allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
-allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
