--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -525,7 +525,6 @@ allow 188.68.36.28;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
-allow 188.68.52.247;
 allow 190.120.229.98;
 allow 190.211.254.97;
 allow 192.108.48.150;
@@ -629,7 +628,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.90;
+allow 195.47.238.89;
 allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -919,6 +918,7 @@ allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -1087,7 +1087,6 @@ allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
-allow 2a01:4f8:222:8c5:ba2d:8c71:db15:171b;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1369,8 +1368,8 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:6930:c716:eaf8:f394;
-allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
@@ -1453,6 +1452,7 @@ allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:17;
 allow 2a12:a800:2:1:45:141:215:19;
 allow 2a12:a800:2:1:45:141:215:21;
+allow 2a12:a800:2:1:45:141:215:226;
 allow 2a12:a800:2:1:45:141:215:28;
 allow 2a12:a800:2:1:45:141:215:40;
 allow 2a12:a800:2:1:45:141:215:56;
@@ -1485,7 +1485,6 @@ allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
-allow 38.180.251.10;
 allow 38.97.116.244;
 allow 45.11.229.132;
 allow 45.11.59.28;
@@ -1495,7 +1494,6 @@ allow 45.128.133.242;
 allow 45.129.0.166;
 allow 45.129.84.246;
 allow 45.129.84.247;
-allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1516,6 +1514,7 @@ allow 45.141.215.169;
 allow 45.141.215.17;
 allow 45.141.215.19;
 allow 45.141.215.21;
+allow 45.141.215.226;
 allow 45.141.215.28;
 allow 45.141.215.40;
 allow 45.141.215.56;
@@ -1599,7 +1598,6 @@ allow 5.255.111.64;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.218;
-allow 5.255.120.205;
 allow 5.255.121.71;
 allow 5.255.123.158;
 allow 5.255.123.164;
@@ -1636,6 +1634,7 @@ allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
+allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
@@ -1671,7 +1670,6 @@ allow 84.16.224.227;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 84.247.165.51;
-allow 85.10.210.197;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 87.118.110.27;
@@ -1713,6 +1711,7 @@ allow 91.208.75.4;
 allow 91.210.59.188;
 allow 91.219.236.101;
 allow 91.219.237.39;
+allow 91.234.199.24;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.223.2.140;
