--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -627,7 +627,7 @@ deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
 deny 195.47.238.89;
-deny 195.47.238.91;
+deny 195.47.238.93;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.251.84.163;
@@ -916,6 +916,7 @@ deny 2.58.56.220;
 deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
+deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:95ff:fe5d:562;
@@ -1364,7 +1365,7 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:2500:571:e95:6930:c716:eaf8:f394;
-deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
@@ -1489,6 +1490,8 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.0.166;
 deny 45.129.84.246;
+deny 45.129.84.247;
+deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.138.16.107;
@@ -1627,6 +1630,7 @@ deny 66.78.40.182;
 deny 67.219.109.141;
 deny 71.19.144.106;
 deny 71.19.144.222;
+deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.235.129.116;
 deny 74.82.47.194;
@@ -1647,6 +1651,7 @@ deny 80.94.92.106;
 deny 80.94.92.92;
 deny 81.16.33.42;
 deny 81.17.28.95;
+deny 81.47.152.6;
 deny 82.153.138.119;
 deny 8.218.9.41;
 deny 82.197.182.161;
