Update lists at 20241123-0900

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -15,6 +15,7 @@ deny 2001:41d0:700:10a2::;
 deny 2001:41d0:700:6d89::3ce8:8538;
 deny 2001:41d0:800:1f70::;
 deny 2001:41d0:801:2000::2b97;
+deny 2001:41d0:801:2000::354d;
 deny 2001:41d0:a:2a61::1;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
@@ -566,9 +567,14 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:2500:571:e95:6930:c716:eaf8:f394;
+deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:bbc7:0:1::254;
+deny 2a0d:bbc7:0:1::320;
+deny 2a0d:bbc7:0:1::394;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
