--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -270,7 +270,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -627,7 +626,8 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.88;
+allow 195.47.238.90;
+allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -670,6 +670,7 @@ allow 2001:41d0:700:10a2::;
 allow 2001:41d0:700:6d89::3ce8:8538;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::2b97;
+allow 2001:41d0:801:2000::354d;
 allow 2001:41d0:a:2a61::1;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
@@ -1365,9 +1366,14 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:6930:c716:eaf8:f394;
+allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:bbc7:0:1::254;
+allow 2a0d:bbc7:0:1::320;
+allow 2a0d:bbc7:0:1::394;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1485,7 +1491,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.0.166;
 allow 45.129.84.246;
-allow 45.129.84.247;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1545,6 +1550,9 @@ allow 45.80.158.27;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.83.21.193;
+allow 45.84.107.182;
+allow 45.84.107.198;
+allow 45.84.107.76;
 allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.223;
@@ -1612,6 +1620,7 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 57.128.171.125;
 allow 5.75.230.49;
 allow 5.79.66.19;
 allow 62.133.45.2;
