--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -270,7 +270,6 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.14;
 deny 185.165.171.84;
 deny 185.170.114.25;
@@ -627,7 +626,8 @@ deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
-deny 195.47.238.88;
+deny 195.47.238.90;
+deny 195.47.238.91;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.251.84.163;
@@ -670,6 +670,7 @@ deny 2001:41d0:700:10a2::;
 deny 2001:41d0:700:6d89::3ce8:8538;
 deny 2001:41d0:800:1f70::;
 deny 2001:41d0:801:2000::2b97;
+deny 2001:41d0:801:2000::354d;
 deny 2001:41d0:a:2a61::1;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
@@ -1365,9 +1366,14 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:2500:571:e95:6930:c716:eaf8:f394;
+deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:bbc7:0:1::254;
+deny 2a0d:bbc7:0:1::320;
+deny 2a0d:bbc7:0:1::394;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1485,7 +1491,6 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.0.166;
 deny 45.129.84.246;
-deny 45.129.84.247;
 deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
@@ -1545,6 +1550,9 @@ deny 45.80.158.27;
 deny 45.8.22.207;
 deny 45.83.104.137;
 deny 45.83.21.193;
+deny 45.84.107.182;
+deny 45.84.107.198;
+deny 45.84.107.76;
 deny 45.94.31.68;
 deny 45.95.169.130;
 deny 45.95.169.223;
@@ -1612,6 +1620,7 @@ deny 54.36.209.254;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
+deny 57.128.171.125;
 deny 5.75.230.49;
 deny 5.79.66.19;
 deny 62.133.45.2;
