--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,7 +7,6 @@ allow 103.163.218.11;
 allow 103.164.54.199;
 allow 103.196.37.111;
 allow 103.208.86.5;
-allow 103.229.54.107;
 allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.28.52.93;
@@ -115,6 +114,7 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 138.59.18.110;
 allow 139.99.172.11;
+allow 141.105.130.8;
 allow 141.11.25.44;
 allow 141.98.11.62;
 allow 142.171.12.88;
@@ -141,6 +141,7 @@ allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.213.187.66;
 allow 154.213.187.98;
+allow 154.216.16.30;
 allow 154.216.17.54;
 allow 154.26.159.157;
 allow 158.69.1.13;
@@ -270,6 +271,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -626,7 +628,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.90;
+allow 195.47.238.89;
 allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -909,14 +911,12 @@ allow 2402:1f00:8100:400::9;
 allow 2406:8dc0:6005::97f2:9c02;
 allow 2407:3640:2207:8882::1;
 allow 2407:6ac0:8:1:0:1:1965:6c63;
-allow 2407:cdc0:c004::d44:d46f;
 allow 24.240.72.170;
 allow 2.56.10.36;
 allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -1366,10 +1366,11 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:6930:c716:eaf8:f394;
-allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
+allow 2a0c:b641:6f0:8a::2;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
@@ -1491,6 +1492,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.0.166;
 allow 45.129.84.246;
+allow 45.129.84.247;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1634,7 +1636,6 @@ allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
-allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
@@ -1646,6 +1647,7 @@ allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 79.124.8.241;
+allow 79.148.219.195;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
