--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -116,9 +116,7 @@ allow 2402:1f00:8100:400::9;
 allow 2406:8dc0:6005::97f2:9c02;
 allow 2407:3640:2207:8882::1;
 allow 2407:6ac0:8:1:0:1:1965:6c63;
-allow 2407:cdc0:c004::d44:d46f;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -567,10 +565,11 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:6930:c716:eaf8:f394;
-allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
+allow 2a0c:b641:6f0:8a::2;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
