--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -116,9 +116,7 @@ set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2406:8dc0:6005::97f2:9c02;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:6ac0:8:1:0:1:1965:6c63;
-set_real_ip_from 2407:cdc0:c004::d44:d46f;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
-set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
@@ -567,10 +565,11 @@ set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:2500:571:e95:6930:c716:eaf8:f394;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
+set_real_ip_from 2a0c:b641:6f0:8a::2;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:bbc7:0:1::254;
 set_real_ip_from 2a0d:bbc7:0:1::320;
