--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -189,7 +189,6 @@ allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.227.215.50;
 allow 176.58.100.98;
 allow 176.58.121.177;
@@ -917,6 +916,7 @@ allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -1492,7 +1492,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.0.166;
 allow 45.129.84.246;
-allow 45.129.84.247;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1636,6 +1635,7 @@ allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
+allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
@@ -1647,7 +1647,6 @@ allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 79.124.8.241;
-allow 79.148.219.195;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
