Update lists at 20241123-1800

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -191,6 +191,7 @@ deny 2605:6400:30:f174:cafe::;
 deny 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 deny 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 deny 2605:6400:30:f38b:28b3:cd24:51f3:e412;
+deny 2605:6400:30:f414:42ce:c612:dab8:1337;
 deny 2605:6400:30:f440:757e:adf1:55f7:5a31;
 deny 2605:6400:30:f44f:1::;
 deny 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
@@ -566,7 +567,7 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:2500:571:e95:6930:c716:eaf8:f394;
-deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
