--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -60,6 +60,7 @@ allow 107.189.29.184;
 allow 107.189.30.236;
 allow 107.189.30.49;
 allow 107.189.30.69;
+allow 107.189.30.86;
 allow 107.189.3.11;
 allow 107.189.31.232;
 allow 107.189.31.33;
@@ -247,6 +248,7 @@ allow 185.112.146.167;
 allow 185.113.128.30;
 allow 185.117.215.9;
 allow 185.123.102.122;
+allow 185.126.117.21;
 allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.129;
@@ -628,7 +630,7 @@ allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
 allow 195.47.238.89;
-allow 195.47.238.91;
+allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -990,6 +992,7 @@ allow 2605:6400:30:f174:cafe::;
 allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 allow 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 allow 2605:6400:30:f38b:28b3:cd24:51f3:e412;
+allow 2605:6400:30:f414:42ce:c612:dab8:1337;
 allow 2605:6400:30:f440:757e:adf1:55f7:5a31;
 allow 2605:6400:30:f44f:1::;
 allow 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
@@ -1366,7 +1369,7 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:6930:c716:eaf8:f394;
-allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
@@ -1492,7 +1495,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.0.166;
 allow 45.129.84.246;
-allow 45.129.84.249;
+allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1589,7 +1592,6 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
