Update lists at 20241123-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -629,7 +629,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.89;
+allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -876,7 +876,6 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
-allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -1369,8 +1368,8 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:6930:c716:eaf8:f394;
+allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
-allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:b641:6f0:8a::2;
@@ -1495,7 +1494,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.0.166;
 allow 45.129.84.246;
-allow 45.129.84.247;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
