--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -629,7 +629,7 @@ deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
-deny 195.47.238.89;
+deny 195.47.238.92;
 deny 195.47.238.93;
 deny 195.80.151.242;
 deny 195.88.74.206;
@@ -876,7 +876,6 @@ deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
-deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
@@ -1369,8 +1368,8 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:2500:571:e95:6930:c716:eaf8:f394;
+deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
-deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:b641:6f0:8a::2;
@@ -1495,7 +1494,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.0.166;
 deny 45.129.84.246;
-deny 45.129.84.247;
+deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.138.16.107;
