--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -567,8 +567,8 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:2500:571:e95:6930:c716:eaf8:f394;
+deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
-deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:b641:6f0:8a::2;
