--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -567,6 +567,8 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:6930:c716:eaf8:f394;
+allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:b641:6f0:8a::2;
