--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -630,7 +630,8 @@ set_real_ip_from 195.47.238.83;
 set_real_ip_from 195.47.238.84;
 set_real_ip_from 195.47.238.86;
 set_real_ip_from 195.47.238.87;
-set_real_ip_from 195.47.238.88;
+set_real_ip_from 195.47.238.90;
+set_real_ip_from 195.47.238.91;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.251.84.163;
@@ -900,6 +901,7 @@ set_real_ip_from 23.154.177.4;
 set_real_ip_from 23.154.177.5;
 set_real_ip_from 23.154.177.6;
 set_real_ip_from 23.154.177.7;
+set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.8.104;
@@ -1368,6 +1370,8 @@ set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:2500:571:e95:6930:c716:eaf8:f394;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:b641:6f0:8a::2;
@@ -1588,6 +1592,7 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
