--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -12,7 +12,6 @@ deny 2001:41d0:304:200::3348;
 deny 2001:41d0:304:200::9dce;
 deny 2001:41d0:601:1100::6524;
 deny 2001:41d0:700:10a2::;
-deny 2001:41d0:700:6d89::3ce8:8538;
 deny 2001:41d0:800:1f70::;
 deny 2001:41d0:801:2000::2b97;
 deny 2001:41d0:801:2000::354d;
@@ -567,8 +566,8 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:2500:571:e95:6930:c716:eaf8:f394;
-deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:b641:6f0:8a::2;
