Update lists at 20241124-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -196,7 +196,6 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.97.114.182;
 allow 176.97.114.202;
-allow 177.149.135.220;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -273,7 +272,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -873,6 +871,7 @@ allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
+allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
@@ -902,8 +901,8 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
-allow 23.155.8.104;
 allow 23.173.216.67;
+allow 23.184.48.78;
 allow 23.94.211.25;
 allow 2400:d320:2202:5765::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -924,12 +923,12 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:3f11:39ca:318:0:1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
@@ -1196,6 +1195,8 @@ allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
+allow 2a09:61c0::21;
+allow 2a09:61c0::22;
 allow 2a0a:3840:8078:22:0:504e:16da:1337;
 allow 2a0a:c801:1:5::57;
 allow 2a0b:4140:6c6c::2;
@@ -1494,7 +1495,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.0.166;
 allow 45.129.84.246;
-allow 45.129.84.249;
+allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1540,10 +1541,6 @@ allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
 allow 45.66.35.22;
-allow 45.66.35.31;
-allow 45.66.35.32;
-allow 45.66.35.33;
-allow 45.66.35.34;
 allow 45.66.35.35;
 allow 45.78.44.215;
 allow 45.79.144.222;
@@ -1623,6 +1620,7 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 5.61.51.143;
 allow 57.128.171.125;
 allow 5.75.230.49;
 allow 5.79.66.19;
