--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -196,7 +196,6 @@ deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.97.114.182;
 deny 176.97.114.202;
-deny 177.149.135.220;
 deny 178.17.170.144;
 deny 178.17.170.23;
 deny 178.17.171.102;
@@ -273,7 +272,6 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.14;
 deny 185.165.171.84;
 deny 185.170.114.25;
@@ -873,6 +871,7 @@ deny 23.137.253.27;
 deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
+deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
 deny 23.154.177.14;
@@ -902,8 +901,8 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
-deny 23.155.8.104;
 deny 23.173.216.67;
+deny 23.184.48.78;
 deny 23.94.211.25;
 deny 2400:d320:2202:5765::1;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -924,12 +923,12 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:12:3f11:39ca:318:0:1;
 deny 2602:fc24:12:4870:39ca:318:0:1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
+deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
@@ -1196,6 +1195,8 @@ deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a07:e042:1:181::1;
 deny 2a07:e042:1:182::1;
+deny 2a09:61c0::21;
+deny 2a09:61c0::22;
 deny 2a0a:3840:8078:22:0:504e:16da:1337;
 deny 2a0a:c801:1:5::57;
 deny 2a0b:4140:6c6c::2;
@@ -1494,7 +1495,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.0.166;
 deny 45.129.84.246;
-deny 45.129.84.249;
+deny 45.129.84.247;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.138.16.107;
@@ -1540,10 +1541,6 @@ deny 45.66.35.10;
 deny 45.66.35.20;
 deny 45.66.35.21;
 deny 45.66.35.22;
-deny 45.66.35.31;
-deny 45.66.35.32;
-deny 45.66.35.33;
-deny 45.66.35.34;
 deny 45.66.35.35;
 deny 45.78.44.215;
 deny 45.79.144.222;
@@ -1623,6 +1620,7 @@ deny 54.36.209.254;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
+deny 5.61.51.143;
 deny 57.128.171.125;
 deny 5.75.230.49;
 deny 5.79.66.19;
