--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -272,6 +272,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -629,7 +630,7 @@ allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
 allow 195.47.238.89;
-allow 195.47.238.91;
+allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -873,7 +874,6 @@ allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
-allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -901,6 +901,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
+allow 23.155.8.104;
 allow 23.173.216.67;
 allow 23.184.48.78;
 allow 23.94.211.25;
@@ -923,6 +924,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:3f11:39ca:318:0:1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
@@ -1157,7 +1159,6 @@ allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:c6c3::1;
-allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
@@ -1369,7 +1370,7 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:6930:c716:eaf8:f394;
-allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
@@ -1550,6 +1551,7 @@ allow 45.80.158.27;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.83.21.193;
+allow 45.83.31.210;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
@@ -1595,7 +1597,6 @@ allow 5.255.111.64;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.218;
-allow 5.255.121.71;
 allow 5.255.123.158;
 allow 5.255.123.164;
 allow 5.255.125.196;
