--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -272,6 +272,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
@@ -629,7 +630,7 @@ set_real_ip_from 195.47.238.84;
 set_real_ip_from 195.47.238.86;
 set_real_ip_from 195.47.238.87;
 set_real_ip_from 195.47.238.89;
-set_real_ip_from 195.47.238.91;
+set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.251.84.163;
@@ -873,7 +874,6 @@ set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
-set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
@@ -901,6 +901,7 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.173.216.67;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.94.211.25;
@@ -923,6 +924,7 @@ set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:fc24:12:3f11:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
@@ -1157,7 +1159,6 @@ set_real_ip_from 2a04:52c0:105:98a3::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:123:c6c3::1;
-set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:52c0:130:d285::1;
@@ -1369,7 +1370,7 @@ set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:2500:571:e95:6930:c716:eaf8:f394;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
@@ -1550,6 +1551,7 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.83.21.193;
+set_real_ip_from 45.83.31.210;
 set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
 set_real_ip_from 45.84.107.76;
@@ -1595,7 +1597,6 @@ set_real_ip_from 5.255.111.64;
 set_real_ip_from 5.255.115.58;
 set_real_ip_from 5.255.117.56;
 set_real_ip_from 5.255.118.218;
-set_real_ip_from 5.255.121.71;
 set_real_ip_from 5.255.123.158;
 set_real_ip_from 5.255.123.164;
 set_real_ip_from 5.255.125.196;
