--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1,4 +1,3 @@
-deny 100.42.176.46;
 deny 102.130.113.9;
 deny 102.130.117.167;
 deny 102.130.127.117;
@@ -117,7 +116,6 @@ deny 130.193.15.186;
 deny 130.193.15.79;
 deny 138.59.18.110;
 deny 139.99.172.11;
-deny 141.105.130.8;
 deny 141.11.25.44;
 deny 141.98.11.62;
 deny 142.171.12.88;
@@ -145,7 +143,6 @@ deny 154.213.185.254;
 deny 154.213.187.66;
 deny 154.213.187.98;
 deny 154.216.16.27;
-deny 154.216.16.30;
 deny 154.26.159.157;
 deny 158.69.1.13;
 deny 160.119.249.240;
@@ -629,7 +626,7 @@ deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
-deny 195.47.238.90;
+deny 195.47.238.89;
 deny 195.47.238.91;
 deny 195.80.151.242;
 deny 195.88.74.206;
@@ -1087,7 +1084,6 @@ deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
-deny 2a01:4f8:c013:5fba::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -1368,11 +1364,10 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
-deny 2a0c:b641:6f0:8a::2;
 deny 2a0c:e300::23;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
@@ -1491,7 +1486,6 @@ deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
-deny 45.129.84.247;
 deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
@@ -1544,7 +1538,6 @@ deny 45.80.158.23;
 deny 45.80.158.27;
 deny 45.8.22.207;
 deny 45.83.104.137;
-deny 45.83.21.193;
 deny 45.83.31.210;
 deny 45.84.107.182;
 deny 45.84.107.198;
@@ -1615,7 +1608,6 @@ deny 5.45.104.176;
 deny 5.45.98.162;
 deny 5.61.51.143;
 deny 57.128.171.125;
-deny 5.75.230.49;
 deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.171.137.169;
