Update lists at 20241125-0300

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -361,7 +361,6 @@ allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
-allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:6388::1;
@@ -392,6 +391,7 @@ allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
+allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a0a:3840:8078:22:0:504e:16da:1337;
@@ -457,7 +457,6 @@ allow 2a0b:f4c2:1::178;
 allow 2a0b:f4c2:1::179;
 allow 2a0b:f4c2:1::182;
 allow 2a0b:f4c2:1::183;
-allow 2a0b:f4c2:1::186;
 allow 2a0b:f4c2:1::187;
 allow 2a0b:f4c2:1::188;
 allow 2a0b:f4c2:1::189;
