--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -208,7 +208,6 @@ deny 178.218.144.51;
 deny 178.218.144.64;
 deny 178.218.144.96;
 deny 178.218.144.99;
-deny 178.30.182.18;
 deny 179.43.128.16;
 deny 179.43.159.194;
 deny 179.43.159.195;
@@ -372,7 +371,6 @@ deny 185.220.101.179;
 deny 185.220.101.18;
 deny 185.220.101.182;
 deny 185.220.101.183;
-deny 185.220.101.186;
 deny 185.220.101.187;
 deny 185.220.101.188;
 deny 185.220.101.189;
@@ -869,7 +867,6 @@ deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
-deny 23.154.177.12;
 deny 23.154.177.13;
 deny 23.154.177.14;
 deny 23.154.177.15;
@@ -1160,7 +1157,6 @@ deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
-deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:6388::1;
@@ -1191,6 +1187,7 @@ deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a07:e042:1:181::1;
 deny 2a07:e042:1:182::1;
+deny 2a09:61c0::20;
 deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a0a:3840:8078:22:0:504e:16da:1337;
@@ -1256,7 +1253,6 @@ deny 2a0b:f4c2:1::178;
 deny 2a0b:f4c2:1::179;
 deny 2a0b:f4c2:1::182;
 deny 2a0b:f4c2:1::183;
-deny 2a0b:f4c2:1::186;
 deny 2a0b:f4c2:1::187;
 deny 2a0b:f4c2:1::188;
 deny 2a0b:f4c2:1::189;
@@ -1466,7 +1462,6 @@ deny 2a12:a800:2:1:45:80:158:27;
 deny 2a12:bec4:11d3:4a89::1;
 deny 2a12:d8c0:109a:9001::7;
 deny 2a13:d207:0:461::1;
-deny 31.129.22.65;
 deny 31.13.195.22;
 deny 31.133.0.210;
 deny 31.220.75.237;
@@ -1486,7 +1481,6 @@ deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
-deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.138.16.107;
@@ -1528,6 +1522,7 @@ deny 45.61.185.172;
 deny 45.61.186.203;
 deny 45.61.187.200;
 deny 45.66.35.10;
+deny 45.66.35.20;
 deny 45.66.35.21;
 deny 45.66.35.22;
 deny 45.66.35.35;
@@ -1576,6 +1571,7 @@ deny 51.89.153.112;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -1631,7 +1627,6 @@ deny 77.48.28.237;
 deny 77.48.28.239;
 deny 77.81.247.72;
 deny 78.142.18.219;
-deny 79.124.8.241;
 deny 80.241.60.207;
 deny 80.67.167.81;
 deny 80.67.172.162;
@@ -1658,6 +1653,7 @@ deny 84.239.46.144;
 deny 84.247.165.51;
 deny 85.239.41.130;
 deny 85.93.218.204;
+deny 87.106.98.81;
 deny 87.118.110.27;
 deny 87.118.116.103;
 deny 87.118.116.12;
