--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -208,7 +208,6 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
-set_real_ip_from 178.30.182.18;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -372,7 +371,6 @@ set_real_ip_from 185.220.101.179;
 set_real_ip_from 185.220.101.18;
 set_real_ip_from 185.220.101.182;
 set_real_ip_from 185.220.101.183;
-set_real_ip_from 185.220.101.186;
 set_real_ip_from 185.220.101.187;
 set_real_ip_from 185.220.101.188;
 set_real_ip_from 185.220.101.189;
@@ -869,7 +867,6 @@ set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
-set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
@@ -1160,7 +1157,6 @@ set_real_ip_from 2a04:52c0:130:d285::1;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
-set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:6388::1;
@@ -1191,6 +1187,7 @@ set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a07:e042:1:181::1;
 set_real_ip_from 2a07:e042:1:182::1;
+set_real_ip_from 2a09:61c0::20;
 set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a0a:3840:8078:22:0:504e:16da:1337;
@@ -1256,7 +1253,6 @@ set_real_ip_from 2a0b:f4c2:1::178;
 set_real_ip_from 2a0b:f4c2:1::179;
 set_real_ip_from 2a0b:f4c2:1::182;
 set_real_ip_from 2a0b:f4c2:1::183;
-set_real_ip_from 2a0b:f4c2:1::186;
 set_real_ip_from 2a0b:f4c2:1::187;
 set_real_ip_from 2a0b:f4c2:1::188;
 set_real_ip_from 2a0b:f4c2:1::189;
@@ -1466,7 +1462,6 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:bec4:11d3:4a89::1;
 set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 2a13:d207:0:461::1;
-set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.195.22;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.220.75.237;
@@ -1486,7 +1481,6 @@ set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
-set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.138.16.107;
@@ -1528,6 +1522,7 @@ set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
 set_real_ip_from 45.61.187.200;
 set_real_ip_from 45.66.35.10;
+set_real_ip_from 45.66.35.20;
 set_real_ip_from 45.66.35.21;
 set_real_ip_from 45.66.35.22;
 set_real_ip_from 45.66.35.35;
@@ -1576,6 +1571,7 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
@@ -1631,7 +1627,6 @@ set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
-set_real_ip_from 79.124.8.241;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
@@ -1658,6 +1653,7 @@ set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
+set_real_ip_from 87.106.98.81;
 set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.116.103;
 set_real_ip_from 87.118.116.12;
