--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -361,7 +361,6 @@ set_real_ip_from 2a04:52c0:130:d285::1;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
-set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:6388::1;
@@ -392,6 +391,7 @@ set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a07:e042:1:181::1;
 set_real_ip_from 2a07:e042:1:182::1;
+set_real_ip_from 2a09:61c0::20;
 set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a0a:3840:8078:22:0:504e:16da:1337;
@@ -457,7 +457,6 @@ set_real_ip_from 2a0b:f4c2:1::178;
 set_real_ip_from 2a0b:f4c2:1::179;
 set_real_ip_from 2a0b:f4c2:1::182;
 set_real_ip_from 2a0b:f4c2:1::183;
-set_real_ip_from 2a0b:f4c2:1::186;
 set_real_ip_from 2a0b:f4c2:1::187;
 set_real_ip_from 2a0b:f4c2:1::188;
 set_real_ip_from 2a0b:f4c2:1::189;
