Update lists at 20241125-1501

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -187,6 +187,7 @@ deny 172.81.132.94;
 deny 173.237.206.68;
 deny 173.249.57.253;
 deny 173.255.198.243;
+deny 173.44.141.34;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.227.215.50;
@@ -627,7 +628,8 @@ deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
-deny 195.47.238.88;
+deny 195.47.238.90;
+deny 195.47.238.91;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.251.84.163;
@@ -1196,6 +1198,7 @@ deny 2a09:61c0::22;
 deny 2a0a:3840:8078:22:0:504e:16da:1337;
 deny 2a0a:c801:1:5::57;
 deny 2a0b:4140:6c6c::2;
+deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1363,6 +1366,8 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
@@ -1482,7 +1487,7 @@ deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
-deny 45.129.84.247;
+deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.138.16.107;
