Update lists at 20241126-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -269,7 +269,6 @@ allow 185.146.232.234;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -611,7 +610,6 @@ allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.36.132.21;
 allow 193.41.226.117;
-allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
@@ -627,7 +625,8 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.88;
+allow 195.47.238.90;
+allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -851,6 +850,7 @@ allow 204.8.96.187;
 allow 204.8.96.188;
 allow 204.8.96.189;
 allow 204.8.96.64;
+allow 204.8.96.66;
 allow 204.8.96.67;
 allow 204.8.96.68;
 allow 204.8.96.69;
@@ -907,7 +907,6 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
-allow 217.64.151.21;
 allow 217.79.189.239;
 allow 23.129.64.131;
 allow 23.129.64.132;
@@ -958,7 +957,6 @@ allow 23.137.248.152;
 allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.109;
-allow 23.137.253.110;
 allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
@@ -1024,7 +1022,6 @@ allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:1c9::1;
-allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::a;
@@ -1238,6 +1235,7 @@ allow 2620:7:6001::188;
 allow 2620:7:6001::189;
 allow 2620:7:6001::e664;
 allow 2620:7:6001::ffff:c759:e640;
+allow 2620:7:6001::ffff:c759:e642;
 allow 2620:7:6001::ffff:c759:e643;
 allow 2620:7:6001::ffff:c759:e644;
 allow 2620:7:6001::ffff:c759:e645;
@@ -1555,6 +1553,8 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
@@ -1676,8 +1676,6 @@ allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
-allow 45.129.84.247;
-allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1730,7 +1728,6 @@ allow 45.80.158.23;
 allow 45.80.158.27;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
