--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -131,7 +131,6 @@ allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:1c9::1;
-allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::a;
@@ -345,6 +344,7 @@ allow 2620:7:6001::188;
 allow 2620:7:6001::189;
 allow 2620:7:6001::e664;
 allow 2620:7:6001::ffff:c759:e640;
+allow 2620:7:6001::ffff:c759:e642;
 allow 2620:7:6001::ffff:c759:e643;
 allow 2620:7:6001::ffff:c759:e644;
 allow 2620:7:6001::ffff:c759:e645;
@@ -661,6 +661,8 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
