--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -269,7 +269,6 @@ deny 185.146.232.234;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.14;
 deny 185.165.171.84;
 deny 185.170.114.25;
@@ -611,7 +610,6 @@ deny 193.26.115.43;
 deny 193.26.115.61;
 deny 193.36.132.21;
 deny 193.41.226.117;
-deny 193.70.80.213;
 deny 194.15.112.133;
 deny 194.15.113.118;
 deny 194.15.115.212;
@@ -627,7 +625,8 @@ deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
-deny 195.47.238.88;
+deny 195.47.238.90;
+deny 195.47.238.91;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.251.84.163;
@@ -851,6 +850,7 @@ deny 204.8.96.187;
 deny 204.8.96.188;
 deny 204.8.96.189;
 deny 204.8.96.64;
+deny 204.8.96.66;
 deny 204.8.96.67;
 deny 204.8.96.68;
 deny 204.8.96.69;
@@ -907,7 +907,6 @@ deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
 deny 217.12.221.131;
-deny 217.64.151.21;
 deny 217.79.189.239;
 deny 23.129.64.131;
 deny 23.129.64.132;
@@ -958,7 +957,6 @@ deny 23.137.248.152;
 deny 23.137.250.83;
 deny 23.137.253.108;
 deny 23.137.253.109;
-deny 23.137.253.110;
 deny 23.137.253.27;
 deny 23.153.248.33;
 deny 23.153.248.34;
@@ -1024,7 +1022,6 @@ deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:1c9::1;
-deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::a;
@@ -1238,6 +1235,7 @@ deny 2620:7:6001::188;
 deny 2620:7:6001::189;
 deny 2620:7:6001::e664;
 deny 2620:7:6001::ffff:c759:e640;
+deny 2620:7:6001::ffff:c759:e642;
 deny 2620:7:6001::ffff:c759:e643;
 deny 2620:7:6001::ffff:c759:e644;
 deny 2620:7:6001::ffff:c759:e645;
@@ -1555,6 +1553,8 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
@@ -1676,8 +1676,6 @@ deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
-deny 45.129.84.247;
-deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.138.16.107;
@@ -1730,7 +1728,6 @@ deny 45.80.158.23;
 deny 45.80.158.27;
 deny 45.8.22.207;
 deny 45.83.104.137;
-deny 45.83.21.193;
 deny 45.84.107.182;
 deny 45.84.107.198;
 deny 45.84.107.76;
